# ODC_GENAI-Cohorte_1-2025

./: .gitignore  README.md  exemple.txt  main.py  pyproject.toml
api_llm/: main.py
api_llm/src/: chain.py  prompts.py  schemas.py  utils.py
api_session/: Session_lab_10.ipynb  Session_lab_10_api_exercie.ipynb
csv_management/: ClientData.py  data_bank_const.py  test.py
db_management/: crud.py  main.py  models.py  schemas.py
db_session/: Session_lab 9_ database.ipynb  data_format.json  database.py  models.py
llm_agent/api_agent/: configs.py  main.py
llm_agent/api_agent/src/: chain.py  prompts.py  schemas.py  utils.py
llm_agent/streamlit_app/: chat.py  prompts.py
simple_session/: Session_1_variables.ipynb  Session_TP_1_Python_pour_la_Data_Science_Python.ipynb  Session_lab 6_gestion_exceptions.ipynb  Session_lab _8_ fonction.ipynb  Session_lab1_ str.ipynb  Session_lab_2-1_ list.ipynb  Session_lab_2-2_ list.ipynb  Session_lab_3_ set-tuple.ipynb  Session_lab_4.ipynb  Session_lab_5_ exception.ipynb  Session_lab_7_ file.ipynb  Session_lab_8-1_ class.ipynb  Session_lab_8-2_ class.ipynb  Session_rappels_python.ipynb  Session_test.ipynb
